--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,8 @@ services:
         limits:
           cpus: "0.25"
           memory: 300M
-        restart_policy: on-failure
+      restart_policy: 
+        condition: on-failure
     ports:
       - "80:8080"
 
